crates/schema/tests/compile_fail/secret_widget_mismatch.rs
fn main() {
    let _ = nebula_schema::Field::secret("token").widget(nebula_schema::StringWidget::Email);
}
